# Satelital_Drone

./: README.md  app.py  config.yaml  pyproject.toml
pipeline/: analytics.py  classify.py  export.py  ingest.py  preprocess.py  report.py
scratch/: debug_analytics.py
scripts/: download_data.py
tests/: test_compliance_stress.py  test_full_system.py  test_pipeline.py  test_self_healing.py
tests/temp_artifacts/: dummy_32719_COG.tif  dummy_4326.tif
tests/temp_artifacts/mock_session/: COG_S2A_B03_10m.tif  COG_S2A_B04_10m.tif  COG_S2A_B08_10m.tif  S2A_B03_10m.jp2  S2A_B04_10m.jp2  S2A_B08_10m.jp2
